# api-but-space

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_playlist.json
.github/workflows/: release.yaml
api/: app.py  constants.py
api/routes/: EdgeDBRoutes.py  SpotifyRoutes.py
api/spotify/: Authenticator.py
manifests/: deployment.yaml
src/api/: app.py  constants.py  utils.py
src/api/generator/: ImageGenerator.py  Transformer.py
src/api/routes/: SpotifyRoutes.py
src/api/spotify/: Authenticator.py  Endpoints.py  SpotifyClient.py
